fix: Styles for dark mode username. Set max dimensions for images in chat messages.

--- a/client/src/app/components/ChatMessage/style.scss
+++ b/client/src/app/components/ChatMessage/style.scss
@@ -21,8 +21,8 @@
 }
 
 .chatMessageImage {
-	height: 100%;
-	width: 100%;
+	max-height: 500px;
+	max-width: 100%;
 }
 
 .chatMessageUrl {
