--- a/client/src/app/components/SettingsForm/UserNameField/style.scss
+++ b/client/src/app/components/SettingsForm/UserNameField/style.scss
@@ -2,6 +2,11 @@
 
 .userNameInput {
 	@extend .form-control;
+	background-color: var(--bg-chat-message);
+	color: var(--text-color-chat-message);
+}
+
+.userNameInput:focus {
 	background-color: var(--bg-chat-message-self);
 	color: var(--text-color-chat-message-self);
 }
